feat: :sparkles: add sign in(fake)

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>Document</title>
-<head>
+<html>
 <body>
-    <h2>Estoy en main</h2>
-    <h3>Estoy en prueba</h3>
-    <h2>De nuevo en main </h2>
+
+<h1>Ingreso Pentagono</h1>
+
+<h3>Ingrese su usuario: </h3>
+<input type="text">
+<br>
+<h3>Ingrese su contraseña: </h3>
+<input type="password">
+<br>
+<br>
+<input type="submit">
+<br>
+<br>
+
+<h10>Presione submit para terminar inicio de sesion</h10>
 </body>
 </html>
